--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="random_button_text">Random</string>
     <string name="previous">Previous</string>
-
     <string name="hello_first_fragment">Hello World!</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="toast_button_text">Toast</string>
+    <string name="count_button_text">Count</string>
 </resources>
